--- a/services.yaml
+++ b/services.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: serv
+  name: deasam-lb
 spec:
   type: LoadBalancer
   selector:
-    name: timloo
+    name: deasam-nodeapp
   ports:
   - port: 80
     targetPort: 8080
