--- a/secrets.yaml
+++ b/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secretdetail
+  namespace: deasam-ns
 data:
   USERRNAME: YWRtaW4=
   PSWD: QWRtaW5Jc1RoZVRyYWl0b3I=
