--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,6 +8,7 @@ spec:
   selector:
     matchLabels:
       name: deasam-nodeapp
+      namespace: deasam-ns
   template:
     metadata:
       labels:
