--- a/secrets.yaml
+++ b/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secretdetail
-  namespace: deasam-ns
+  namespace: kubernetes-cluster-deepaksharma09
 data:
   USERRNAME: YWRtaW4=
   PSWD: QWRtaW5Jc1RoZVRyYWl0b3I=
